--- a/templates/item/item-knightCore-sheet.html
+++ b/templates/item/item-knightCore-sheet.html
@@ -24,8 +24,8 @@
         <input type="text" value="{{data.speed.value}}" name="data.speed.value">
     </div>
     <div class="flexcol">
-        <label>Overload:</label>
-        <input type="text" value="{{data.overload.value}}" name="data.overload.value">
+        <label>Heat Cap:</label>
+        <input type="text" value="{{data.heatCap.value}}" name="data.heatCap.value">
     </div>
     <div class="flexcol">
         <label>Item Quality:</label>
