--- a/templates/item/item-meleeWeapon-sheet.html
+++ b/templates/item/item-meleeWeapon-sheet.html
@@ -78,7 +78,7 @@
 
                 {{#select data.mounting.value}}
                 {{#each FORTYK.weaponMounts}}
-                <option value="{{label}}">{{label}}</option>
+                <option value="{{value}}">{{label}}</option>
                 {{/each}}
                 {{/select}}
             </select>
@@ -89,7 +89,7 @@
 
                 {{#select data.facing.value}}
                 {{#each FORTYK.weaponFacings}}
-                <option value="{{label}}">{{label}}</option>
+                <option value="{{value}}">{{label}}</option>
                 {{/each}}
                 {{/select}}
             </select>
