--- a/templates/item/item-rangedWeapon-sheet.html
+++ b/templates/item/item-rangedWeapon-sheet.html
@@ -93,7 +93,7 @@
 
                 {{#select data.mounting.value}}
                 {{#each FORTYK.weaponMounts}}
-                <option value="{{label}}">{{label}}</option>
+                <option value="{{value}}">{{label}}</option>
                 {{/each}}
                 {{/select}}
             </select>
@@ -104,7 +104,7 @@
 
                 {{#select data.facing.value}}
                 {{#each FORTYK.weaponFacings}}
-                <option value="{{label}}">{{label}}</option>
+                <option value="{{value}}">{{label}}</option>
                 {{/each}}
                 {{/select}}
             </select>
