--- a/templates/chat/chat-test.html
+++ b/templates/chat/chat-test.html
@@ -6,7 +6,7 @@
         <span class="chat-target">{{rollResult}}</span>
         {{#if modifiers}}
         <label class="chat-target popup" data-id="{{id}}"> {{target}} <span class="popuptext2 chat-background flexcol" id="{{id}}">
-            {{#each modifiers}}{{#unless (equals value 0)}}<div>{{this.label}}: {{#if (greaterThan value -1)}}+{{/if}}{{this.value}}</div>{{/unless}}
+            {{#each modifiers}}{{#unless (equals value 0)}}<div class="pop-line"><span>{{this.label}}:</span> <span>{{#if (greaterThan value -1)}}+{{/if}}{{this.value}}</span></div>{{/unless}}
             {{/each}}</span></label> 
         {{else}}
         <span class="chat-target">{{target}}</span>   
